rewrite to use github api

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "type": "module",
   "dependencies": {
-    "JSONStream": "^1.3.5",
     "gettext.js": "^1.2.0",
-    "pinyin": "^3.0.0-alpha.5",
-    "zx": "^7.0.8"
+    "pinyin": "^3.0.0-alpha.5"
+  },
+  "devDependencies": {
+    "@types/github-script": "github:actions/github-script",
+    "adm-zip": "^0.5.12",
+    "octokit": "^4.0.2"
   }
 }
