--- a/.github/workflows/pull-data.yml
+++ b/.github/workflows/pull-data.yml
@@ -9,31 +9,17 @@ jobs:
   pull-data:
     name: Pull Cataclysm-DDA data
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@70f0831dd93a33fae14b2c04ec77e6adb632806f
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
         with:
-          root-reserve-mb: 512
-          swap-size-mb: 1024
-          remove-dotnet: 'true'
-          remove-haskell: 'true'
-          remove-android: 'true'
-
-      - name: Measure disk space
-        run: df -h
-
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Measure disk space
-        run: df -h
-
+          node-version: '20.x'
       - run: yarn
-      - run: npx zx pull-data.mjs
-      - run: |
-          git config --global user.name 'HHG2C Update Bot'
-          git config --global user.email 'hhg2c@users.noreply.github.com'
-          git add data builds.json latest-build.json
-          git commit -a --amend -m "Update data for $(jq .latest_build latest-build.json)" && git push -f || true
-          echo Free space:
-          df -h
+      - uses: actions/github-script@v7
+        with:
+          script: |
+            const { default: run } = await import('${{ github.workspace }}/pull-data.mjs')
+
+            await run({ github, context })
