--- a/.github/workflows/pull-data.yml
+++ b/.github/workflows/pull-data.yml
@@ -22,4 +22,4 @@ jobs:
           script: |
             const { default: run } = await import('${{ github.workspace }}/pull-data.mjs')
 
-            await run({ github, context, dryRun: true })
+            await run({ github, context })
