--- a/.github/workflows/pull-data.yml
+++ b/.github/workflows/pull-data.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-      - run: yarn
+      - run: yarn install --frozen-lockfile --production=true
       - uses: actions/github-script@v7
         with:
           script: |
